<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.truemath.MainActivity">

    <LinearLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/largeMarginTop"
            android:text="@string/Title"
            android:textColor="@color/colorAccent"
            android:textSize="30sp" />

        <LinearLayout
            android:id="@+id/rules"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/largeMarginTop"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/RulesTitle"
                android:textAllCaps="true"
                android:textSize="@dimen/midTextSize" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/smallMarginTop"
                android:text="@string/Rule1"
                android:textAlignment="center"
                android:textAllCaps="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/smallMarginTop"
                android:text="@string/Rule2"
                android:textAlignment="center"
                android:textAllCaps="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/smallMarginTop"
                android:text="@string/Rule3"
                android:textAlignment="center"
                android:textAllCaps="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/smallMarginTop"
                android:text="@string/Rule4"
                android:textAlignment="center"
                android:textAllCaps="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/smallMarginTop"
                android:text="@string/Rule5"
                android:textAlignment="center"
                android:textAllCaps="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/largeMarginTop"
                android:onClick="startButton"
                android:text="@string/button" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>